--- a/views/_navbar.ejs
+++ b/views/_navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="container d-flex">
     <div class=" mt-1">
-        <div class="p-2 fw-bold">SteadySteps</div>
+        <h4 class="p-2 fw-bold">SteadySteps</h4>
     </div>
     <div class="ms-auto p-2 ">
         <button id="add-habit" type="button" class="btn btn-outline-dark my-auto" data-bs-toggle="modal"
