--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,43 +8,45 @@
 <!-- Variables to be provided -->
 <!-- habits -->
 <!-- month:days -->
-<link rel="stylesheet" href="/css/home.css">
-</link>
-<main>
+<%- include('_navbar') %>
+    <link rel="stylesheet" href="/css/home.css">
+    </link>
+    <main>
 
 
 
 
-    <div id="calendar" class="container">
-        <div id="calender-header" class="col-6 col-md-3 mx-auto  d-flex justify-content-center">
-            <div id="prevButton" class="cursor-pointer fs-5">&lt;</div>
-            <div id="header-title"></div>
-            <div id="nextButton" class="cursor-pointer fs-5">&gt;</div>
+        <div id="calendar" class="container-fluid">
+            <div id="calender-header" class="col-6 col-md-3 mx-auto  d-flex justify-content-center">
+                <div id="prevButton" class="cursor-pointer fs-5"> <i class="fa-solid fa-chevron-left"></i>
+                </div>
+                <div id="header-title"></div>
+                <div id="nextButton" class="cursor-pointer fs-5"><i class="fa-solid fa-chevron-right"></i></div>
+            </div>
+            <div id="calendar-body" class="table-responsive ">
+                <table id="calender-table" class=" table-bordered mx-auto">
+                    <thead>
+
+                    </thead>
+                    <tbody>
+
+                        <!-- Set the habits toa js obj -->
+
+
+
+
+                    </tbody>
+                </table>
+            </div>
         </div>
-        <div id="calendar-body" class="table-responsive ">
-            <table id="calender-table" class=" table-bordered mx-auto">
-                <thead>
-
-                </thead>
-                <tbody>
-
-                    <!-- Set the habits toa js obj -->
 
 
 
+    </main>
 
-                </tbody>
-            </table>
-        </div>
-    </div>
+    <%-include('_createHabit') %>
 
-
-
-</main>
-
-<%-include('_createHabit') %>
-
-    <script type="application/javascript" src="/js/setCellsStatus.js"></script>
-    <script type="application/javascript" src="/js/setCellsStatus.js"></script>
-    <script type="application/javascript" src="/js/setTableHeader.js"></script>
-    <script type="application/javascript" src="/js/setClickListnersCell.js"></script>
+        <script type="application/javascript" src="/js/setCellsStatus.js"></script>
+        <script type="application/javascript" src="/js/setCellsStatus.js"></script>
+        <script type="application/javascript" src="/js/setTableHeader.js"></script>
+        <script type="application/javascript" src="/js/setClickListnersCell.js"></script>
