Add Delete a habit feature

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,7 +30,6 @@
                     </thead>
                     <tbody>
 
-                        <!-- Set the habits toa js obj -->
 
 
 
@@ -49,4 +48,4 @@
         <script type="application/javascript" src="/js/setCellsStatus.js"></script>
         <script type="application/javascript" src="/js/setCellsStatus.js"></script>
         <script type="application/javascript" src="/js/setTableHeader.js"></script>
-        <script type="application/javascript" src="/js/setClickListnersCell.js"></script>
+        <script type="application/javascript" src="/js/addCellListners.js"></script>
