--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,11 +1,8 @@
 .table-responsive {
   overflow-x: auto;
 }
-table {
-  /* display: none !important; */
-}
+
 th {
-  /* width: 2.2vw !important; */
   font-weight: 500;
   color: black;
   font-size: 0.9rem;
@@ -16,7 +13,6 @@ th {
 
 td {
   text-align: center;
-  /* width: 2.2vw !important; */
   border: 1px solid black;
   border-collapse: collapse;
   padding: 5px;
@@ -60,6 +56,7 @@ td {
   color: black;
   cursor: pointer;
 }
+/* Set height of data cells for mobile devices  */
 @media only screen and (max-width: 600px) {
   .table-bordered th {
     border: 1.5px solid #eef0f3;
