--- a/views/yearlyPerformance.ejs
+++ b/views/yearlyPerformance.ejs
@@ -73,7 +73,7 @@
 
 <script>
     document.querySelector('.delete').addEventListener('click', () => {
-        window.location.href = 'http://localhost:8000/habit/<%=habit_id%>'
+        window.location.href = 'https://steady-steps.socialise-india.in/habit/<%=habit_id%>'
     })
 
 </script>
